feat: update search bar layout on home page

--- a/themes/hugo-theme-stack-master/assets/scss/partials/widgets.scss
+++ b/themes/hugo-theme-stack-master/assets/scss/partials/widgets.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
 
     .widget-icon {
+        margin-left: 2px;
         svg {
             width: 32px;
             height: 32px;
