--- a/themes/hugo-theme-stack-master/assets/scss/general.scss
+++ b/themes/hugo-theme-stack-master/assets/scss/general.scss
@@ -20,6 +20,7 @@ a {
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 10px;
+    margin-left: 4px;
     display: block;
     font-size: 1.6rem;
     font-weight: bold;
