--- a/themes/hugo-theme-stack-master/layouts/partials/widget/search.html
+++ b/themes/hugo-theme-stack-master/layouts/partials/widget/search.html
@@ -1,9 +1,14 @@
 {{- $query := first 1 (where .Context.Site.Pages "Layout" "==" "search") -}}
 {{- if $query -}}
     {{- $searchPage := index $query 0 -}}
+<section class="widget">
+    <div class="widget-icon">
+        {{ partial "helper/icon" "search" }}
+    </div>
+    <h2 class="widget-title section-title">{{ T "widget.search.title" }}</h2>
     <form action="{{ $searchPage.RelPermalink }}" class="search-form widget" {{ with .OutputFormats.Get "json" -}}data-json="{{ .Permalink }}" {{- end }}>
         <p>
-            <label>{{ T "search.title" }}</label>
+            <!-- <label>{{ T "search.title" }}</label> -->
             <input name="keyword" required placeholder="{{ T `search.placeholder` }}" />
         
             <button title="{{ T `search.title` }}">
@@ -11,6 +16,7 @@
             </button>
         </p>
     </form>
+</section>
 {{- else -}}
     {{- warnf "Search page not found. Create a page with layout: search." -}}
 {{- end -}}
