--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,8 +7,8 @@
     <div class="welcome">
         <p style="font-size: 2rem; text-align: center; font-weight: bold">
           <span class="shake">👋</span>
-          <span class="jump-text1" > Welcome</span>
-          <span class="jump-text2"> To </span>
+          <span class="jump-text1 slogan" > Welcome</span>
+          <span class="jump-text2 slogan"> To </span>
           <span class="jump-text9" style="color:#e99312">LAB530</span>
         </p>
     </div>
