--- a/layouts/index.html
+++ b/layouts/index.html
@@ -11,6 +11,10 @@
           <span class="jump-text2 slogan"> To </span>
           <span class="jump-text9" style="color:#e99312">LAB530</span>
         </p>
+        <p style="font-size: 1.6rem; text-align: center; font-weight: bold">
+            <span class="jump-text1" > 欢迎 24 级新生加入 QQ 群: </span>
+            <span class="jump-text9" style="color:#021ef1">975630844</span>
+        </p>
     </div>
     <section class="article-list">
         {{ range $index, $element := $pag.Pages }}
