code-header.svg

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -264,7 +264,7 @@ a {
   .highlight:before {
     content: "";
     display: block;
-    background: url(/img/code-header.svg);
+    background: url(img/code-header.svg);
     height: 32px;
     width: 100%;
     background-size: 57px;
