背景颜色更改
背景颜色更改

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -24,9 +24,9 @@
     // 行内代码前景色
     --code-text-color: #e96900;
     // 暗黑模式下背景色
-    --body-background: #000;
+    --body-background: #192227;
     // 暗黑模式下卡片背景色
-    --card-background: hsl(225 13% 8% / 1);
+    --card-background: hsl(210, 17%, 18%);
   }
 }
 //------------------------------------------------------
