--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,7 @@
           <span class="jump-text9" style="color:#e99312">LAB530</span>
         </p>
         <p style="font-size: 1.6rem; text-align: center; font-weight: bold">
-            <span class="jump-text1" > 欢迎 24 级新生加入 QQ 群: </span>
+            <span class="jump-text1 slogan" > 欢迎 24 级新生加入 QQ 群: </span>
             <span class="jump-text9" style="color:#021ef1">975630844</span>
         </p>
     </div>
