--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -75,34 +75,43 @@ code {
 }
 // ---------------------------------------
 // 代码块样式修改
-.highlight {
-  max-width: 102% !important;
-  background-color: var(--pre-background-color);
-  padding: var(--card-padding);
-  position: relative;
-  border-radius: 20px;
-  margin-left: -7px !important;
-  margin-right: -12px;
-  box-shadow: var(--shadow-l1) !important;
-
-  &:hover {
-    .copyCodeButton {
-      opacity: 1;
+.article-content {
+  .highlight {
+    max-width: 102%!important; /* 设置固定宽度 */
+    background-color: var(--pre-background-color);
+    padding: var(--card-padding);
+    position: relative;
+    border-radius: 20px;
+    margin-left: -7px !important;
+    margin-right: -12px;
+    box-shadow: var(--shadow-l1) !important;
+  
+    &:hover {
+      .copyCodeButton {
+        opacity: 1;
+      }
+    }
+  
+    // keep Codeblocks LTR
+    [dir="rtl"] & {
+      direction: ltr;
+    }
+  
+    pre {
+      margin: initial;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+      white-space: pre; /* 保持空格和换行 */
+      max-height: 20em; /* 固定代码块的最大高度 */
+      overflow: auto; /* 超出部分显示垂直滚动条 */
+    }
+    .ln {
+      user-select: none;
     }
   }
-
-  // keep Codeblocks LTR
-  [dir="rtl"] & {
-    direction: ltr;
-  }
-
-  pre {
-    margin: initial;
-    padding: 0;
-    margin: 0;
-    width: auto;
-  }
 }
+
 
 // light模式下的代码块样式调整
 [data-scheme="light"] .article-content .highlight {
@@ -240,17 +249,7 @@ a {
   border-radius: 17%;
 }
 
-//----------------------------------------------------
-//固定代码块的高度
-.article-content {
-  .highlight {
-      padding: var(--card-padding);
-      pre {
-          width: auto;
-          max-height: 20em;
-      }
-  }
-}
+
 
 //--------------------------------------------------
 // 修改首页搜索框样式
@@ -272,5 +271,102 @@ a {
     background-repeat: no-repeat;
     margin-bottom: 5px;
     background-position: -1px 2px;
+  }
+}
+
+//将滚动条修改为圆角样式
+//菜单滚动条美化
+.menu::-webkit-scrollbar {
+  display: none;
+}
+
+// 全局滚动条美化
+html {
+  ::-webkit-scrollbar {
+    width: 20px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #d6dee1;
+    border-radius: 20px;
+    border: 6px solid transparent;
+    background-clip: content-box;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #a8bbbf;
+  }
+}
+
+//  ~\blog\assets\scss\custom.scss
+
+//--------------------------------------------------
+//归档页面双栏
+/* 归档页面两栏 */
+@media (min-width: 1024px) {
+  .article-list--compact {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background: none;
+    box-shadow: none;
+    gap: 1rem;
+
+    article {
+      background: var(--card-background);
+      border: none;
+      box-shadow: var(--shadow-l2);
+      margin-bottom: 8px;
+      border-radius: 16px;
+    }
+  }
+}
+
+
+//---------------------------------------------------------
+//首页欢迎板块样式
+.welcome {
+  color: var(--card-text-color-main);
+  background: var(--card-background);
+  box-shadow: var(--shadow-l2);
+  border-radius: 30px;
+  display: inline-block;
+}
+
+// 👋emoji实现摆动效果
+.shake {
+  display: inline-block;
+  animation: shake 1s;
+  animation-duration: 1s;
+  animation-timing-function: ease;
+  animation-delay: 0s;
+  animation-iteration-count: 1;
+  animation-direction: normal;
+  animation-fill-mode: none;
+  animation-play-state: running;
+  animation-name: shake;
+  animation-timeline: auto;
+  animation-range-start: normal;
+  animation-range-end: normal;
+  animation-delay: 2s;
+  @keyframes shake {
+    0% {
+      transform: rotate(0);
+    }
+    25% {
+      transform: rotate(45deg) scale(1.2);
+    }
+    50% {
+      transform: rotate(0) scale(1.2);
+    }
+    75% {
+      transform: rotate(45deg) scale(1.2);
+    }
+    100% {
+      transform: rotate(0);
+    }
   }
 }
