--- a/themes/hugo-theme-stack-master/assets/scss/partials/layout/article.scss
+++ b/themes/hugo-theme-stack-master/assets/scss/partials/layout/article.scss
@@ -36,7 +36,7 @@
             .footnotes {
                 font-family: var(--base-font-family);
             }
-
+            .highlight
             img {
                 max-width: 100%;
                 height: auto;
